--- a/templates/default/haproxy.cfg.erb
+++ b/templates/default/haproxy.cfg.erb
@@ -9,6 +9,7 @@ global
 <% if node['haproxy']['enable_stats_socket'] -%>
   stats socket <%= node['haproxy']['stats_socket_path'] %> user <%= node['haproxy']['stats_socket_user'] %> group <%= node['haproxy']['stats_socket_group'] %>
 <% end -%>
+  tune.bufsize <%= node['haproxy']['perf']['buffer_size'] %>
 
 defaults
   log     global
